tests/compile_fail/associated_type.stderr
error: Associated types not supported
 --> tests/compile_fail/associated_type.rs:7:9
  |
7 |         type Output;
  |         ^^^^^^^^^^^^
